--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,28 +1,36 @@
-.App {
-  text-align: center;
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: lightgray;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
 }
 
-.App-header {
+.card-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+.card-content {
+  display: flex;
+  flex-direction: column;
 }
 
-.App-intro {
-  font-size: large;
+.card-actions {
+  display: flex;
+  justify-content: flex-end;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.contact-opt {
+  padding-top: 4px; 
+  display: flex;
+  align-items: center;
 }
